--- a/backend/package.json
+++ b/backend/package.json
@@ -102,7 +102,8 @@
     "whatwg-url": "^11.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "repository": {
     "type": "git",
